fix hero section color on mobile

--- a/assets/css/mobile-resolution.css
+++ b/assets/css/mobile-resolution.css
@@ -8,6 +8,10 @@
         background-color: var(--bg) !important;
     }
 
+    .page-panel--full .page-slicer::after {
+        background-image: none !important;
+    }
+
     .header-inner {
         flex-direction: row;
         align-items: center;
